dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    labels:
      app: hellodevoteam
    name: hellodevoteam
  spec:
    replicas: 2
    selector:
      deploymentconfig: hellodevoteam
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: hellodevoteam
          deploymentconfig: hellodevoteam
      spec:
        containers:
        - imagePullPolicy: Always
          name: hellodevoteam
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - hellodevoteam
        from:
          kind: ImageStreamTag
          name: hellodevoteam:latest
          namespace: kude-demo
      type: ImageChange
    - type: ConfigChange
  status:
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
