service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hellodevoteam
  name: hellodevoteam
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deploymentconfig: hellodevoteam
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
