route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  labels:
    app: hellodevoteam
  name: hellodevoteam
spec:
  host: hellodevoteam-kude-demo.apps.brobald.home
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hellodevoteam
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
